# cleaning_checklist_backend

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Description.md  README.md  cleaner.db  cleaner.db-shm  cleaner.db-wal  implementation_plan.md  oauth2-implementation-prompt.md  oauth2_user_migration_plan.md  technical_specification.md
migrations/: 2000_create_users.sql  2003_alter_users_add_oauth_fields.sql  2025-09-01-000001_create_rooms.sql  2025-09-01-000002_create_zones.sql  20250919000003_add_user_id_to_rooms.sql  20250926000001_create_users.sql  20250926000002_create_oauth_clients.sql  20250926000003_create_authorization_codes.sql  20250926000004_create_access_tokens.sql  20250926000005_create_refresh_tokens.sql  20250926000006_add_user_id_to_rooms_zones.sql  20250927000001_remove_zones_user_id.sql
src/: error.rs  lib.rs  main.rs  models.rs
src/api/: admin.rs  docs.rs  mod.rs  oauth.rs  rooms.rs  stats.rs  users.rs  zones.rs
src/auth/: middleware.rs  mod.rs  password.rs  scopes.rs  tokens.rs
src/auth/oauth/: authorize.rs  introspect.rs  mod.rs  revoke.rs  token.rs
src/models/: oauth_client.rs  token.rs  user.rs
tests/: auth_room_scenario.rs  full_auth_integration.rs  register_create_get_room_integration.rs  register_room_scenario.rs  room_scenario.rs  user_data_isolation.rs  zones.rs
