[package]
name = "cleaner-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = "0.8"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "macros", "migrate"] }
utoipa = { version = "4", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
tower = "0.5"
dotenvy = "0.15"
anyhow = "1.0"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
hex = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }

[dev-dependencies]
